# Infotainment-System

DeviceDrivers/gpio-mod/: gpio-mod_0.1.bb
DeviceDrivers/gpio-mod/files/: Makefile  PlatformDriverSysfs.c  PlatformDriverSysfs.h
DeviceDrivers/mpu-mod/files/: Makefile  mpu6050.c
GUI/: readme
GUI/SongPlayer/: CMakeLists.txt  batteryindicator.cpp  batteryindicator.h  client.cpp  client.h  doorstate.cpp  doorstate.h  main.cpp  main.qml
GUI/userInterface/: AudioInfoBox.qml  Button1.qml  CMakeLists.txt  ImageButton.qml  Main.qml  README.md  audioinfo.cpp  client.cpp  client.h  doorstate.cpp  doorstate.h  main.cpp  playercontroller.cpp  playercontroller.h  sensorclient.cpp  sensorclient.h  server.cpp  tempindicator.cpp  tempindicator.h
GUI/userInterface/assets/: playercontroller.cpp  playercontroller.h
Socket Programming/: client.cpp  server.cpp
Yocto Customization/: bblayers.conf  local.conf
Yocto Customization/meta-mylayer/recipes-example/add-network/: addnetwork_1.0.bb
Yocto Customization/meta-mylayer/recipes-example/add-network/files/: 10-static.network
Yocto Customization/meta-mylayer/recipes-example/gpio-mod/files/: pcd_device_setup.c  pcd_syscalls.c  platform.h
Yocto Customization/meta-mylayer/recipes-example/mpu-mod/: mpu-mod_0.1.bb
Yocto Customization/meta-mylayer/recipes-network/init-ifupdown/init-ifupdown/: interfaces
Yocto Customization/meta-mylayer/recipes-network/wpa-supplicant/: wpa-supplicant_%.bbappend
Yocto Customization/meta-mylayer/recipes-network/wpa-supplicant/wpa-supplicant/: wpa_supplicant.conf-sane
